* `id` will no longer silently return incorrect results when the number of 
  possible combinations is > 2^52 (Response to #63)
  
* `split_indices` checks input more aggressively to prevent segfaults. 
   Fixes #43.

* fix small bug in `loop_apply` which lead to segfaults in certain
  circumstances. (Thanks to Pål Westermark for patch)

Version 1.6
------------------------------------------------------------------------------

* documentation improved using new features of `roxygen2`

* fixed namespacing issue which lead to lost labels when subsetting the
  results of `*lply`

* `colwise` automatically strips off split variables.

* `rlply` now correctly deals with `rlply(4, NULL)` (thanks to bug report from
  Eric Goldlust)

* `rbind.fill` tries harder to keep attributes, retaining the attributes from
  the first occurrence of each column it finds. It also now works with
  variables of class `POSIXlt` and preserves the ordered status of factors.

* `arrange` now works with one column data frames

Version 1.5.2
------------------------------------------------------------------------------

* `d*ply` returns correct number of rows when function returns vector

* fix NAMESPACE bug which was causing problems with ggplot2

Version 1.5.1
------------------------------------------------------------------------------

* `rbind.fill` now treats 1d arrays in the same way as `rbind` (i.e. it turns
  them into ordinary vectors)

* fix bug in rename when renaming multiple columns

Version 1.5 (2011-03-02)
------------------------------------------------------------------------------

NEW FEATURES

* new `strip_splits` function removes splitting variables from the data frames
  returned by `ddply`.

* `rename` moved in from reshape, and rewritten.

* new `match_df` function makes it easy to subset a data frame to only contain
  values matching another data frame. Inspired by
  http://stackoverflow.com/questions/4693849.

BUG FIXES
